--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1", features = ["full"] }
 lazy_static = "1.4.0"
 tikv-client = "0.1.0"
 mysql_async = "0.29.0"
+serde_json = "1.0.59"
