--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ redis-module = { version="0.25", features = ["experimental-api"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 lazy_static = "1.4.0"
-tikv-client = "0.1.0"
+# tikv-client = "0.1.0"
+tikv-client = { git = "https://github.com/ekexium/client-rust", branch = "fix-pessimitic-lock-ttl" }
 mysql_async = "0.29.0"
 serde_json = "1.0.59"
 etcd-client = "0.8"
