--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 lazy_static = "1.4.0"
 # tikv-client = "0.1.0"
-tikv-client = { git = "https://github.com/tikv/client-rust", branch = "master" }
+tikv-client = { git = "https://github.com/blacktear23/client-rust.git", branch = "try-optimize" }
 mysql_async = "0.29.0"
 serde_json = "1.0.59"
 etcd-client = "0.8"
