--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,8 @@ redis-module = { version="0.25", features = ["experimental-api"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 lazy_static = "1.4.0"
-# tikv-client = "0.1.0"
 tikv-client = { git = "https://github.com/blacktear23/client-rust.git", branch = "try-optimize" }
-mysql_async = "0.29.0"
-serde_json = "1.0.59"
-etcd-client = "0.8"
 prometheus = "0.13.0"
-hyper = "0.14.16"
+hyper = { version = "0.14.17", features = ["full"] }
 gperftools = "0.2.0"
 thiserror = "1"
