--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ bytes = "1"
 atoi = "0.3.2"
 tokio-io-timeout = "1.2.0"
 bytebuffer = "0.2.1"
+async-std = { version = "1.11.0", features = ["unstable"] }
